--- a/app/src/main/res/layout/content_main_cyber_laws.xml
+++ b/app/src/main/res/layout/content_main_cyber_laws.xml
@@ -8,7 +8,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.thealamin.isecure.CyberLaws"
     tools:showIn="@layout/app_bar_main_cyber_laws"
-    android:background="@drawable/blur_img_bg">
+    android:background="#fcfafa">
 
     <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
@@ -23,12 +23,18 @@
                 android:padding="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:id="@+id/textView48"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:text="নারী অধিকার ও কয়েকটি আইন বইয়ে লেখক বাংলাদেশের নারী অধিকার ও এর স্বরূপ, নারী অধিকার সংক্রান্ত আন্তর্জাতিক বিভিন্ন চুক্তি এবং বাংলাদেশে প্রচলিত পারিবারিক আইনের বিধান অনুযায়ী বিদ্যমান নারীর অধিকার ও অবস্থান বিষয়ে আলোকপাত করেছেন। এছাড়া মুসলিম পারিবারিক আইন অধ্যাদেশ ১৯৬১, পারিবারিক আদালত অধ্যাদেশ ১৯৮৫, নারী ও শিশু নির্যাতন দমন আইন ২০০০, যৌতুক নিরোধ আইন ১৯৮০, এসিড অপরাধ নিয়ন্ত্রণ আইন ২০০২ সম্পর্কেও সংক্ষিপ্তভাবে আলোচনা করা হয়েছে। এ সকল আইনে নারীর প্রতি সহিংস আচরণ করা হলে নারী আইনগতভাবে কী প্রতিকার পেতে পারে সে সম্পর্কে সহজবোধ্য ভাষায় আলোচনা করা হয়েছে। এ বইয়ে পাঠক বিবাহ, তালাক, বিশেষ বিবাহ আইন, বহুবিবাহ, অভিভাবকত্ব, ভরণপোষণ, দেনমোহর, সম্পত্তিতে নারীর অধিকার ও দত্তক গ্রহণ ইত্যাদি বিষয়ে বিভিন্ন ধর্মাবলম্বীদের মধ্যে নারীর অবস্থান সম্পর্কে একটি তুলনামূলক ধারণা লাভ করতে সমর্থ হবেন।
-
-    "/></ScrollView>
+                android:textStyle="normal"
+                android:textAlignment="gravity"
+                android:text="Cyber Law:
+1. Punishment for tampering with computer source documents.
+Whoever intentionally or knowingly conceals, destroys or alters or intentionally or knowingly causes any other person to conceal, destroy or alter any computer source code used for a computer, computer programme, computer system or computer network, when the computer source code is required to be kept or maintained by any law for the time being in force, shall be punishable with imprisonment of either description for a term which may extend to three years, or with fine which may extend to Taka two lakhs, or with both.
+Explanation.- For the purpose of this section, “computer source code” means the listing of programmes, computer commands, design and layout and programme analysis of computer resource in any form.
+2. Hacking with computer system.
+ Whoever, with the intent to cause or knowing that he is likely to cause wrongful loss or damages to the public or any other person, does any act and thereby destroys, deletes or alters any information residing in a computer resource or diminishes its value or utility or affects it injuriously by any means, commits the offence of “hacking”.
+3. Punishment for hacking.
+ Whoever commits hacking shall be punished with imprisonment of either description for a term which may extend to three years, or with fine which may extend to Taka two lakhs, or with both."
+                android:textSize="15dp"
+                android:textIsSelectable="false" /></ScrollView>
 </LinearLayout>
 </RelativeLayout>
